# Multi-agent-code-reviewer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_SETUP.md  Dockerfile  README.md  WEEK1_TASKS.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: inspect-dataset.md
.claude/memory/: MEMORY.md  project_progress.md
docs/: LEARNING_LOG.md  data_cleaning.md  datasets.md  web_sources.md
examples/: 01_chain.py  02_fewshot.py  03_structured.py  04_langgraph_basic.py  05_milvus_basic.py
scripts/: hello.py
src/: benchmark.py
src/agents/: multi_agent.py
src/api/: main.py
src/data/: build_dataset.py
src/eval/: evaluator.py
src/prompts/: templates.py
src/schemas/: review.py
src/tools/: code_chunker.py  github_fetcher.py  rag_store.py  review_runner.py  token_tracker.py
tests/: test_multi_agent.py
