[project]
name = "multi-agent-code-reviewer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "PyGithub>=2.0.0",
    "langchain-openai>=0.2.0",
    "pymilvus>=2.4.0",
    "FlagEmbedding>=1.2.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "pandas>=2.0.0",
    "datasets>=2.20.0",
]

[tool.pytest.ini_options]
markers = ["integration: requires live API key"]

[tool.ruff]
line-length = 88
